<resources>
    <string name="app_name">LoginLayoutDemo</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="ait_2017_mobile_team">AIT 2017 Mobile team</string>
</resources>
